# model-optimization

./: .gitignore  ModelOptimization.ipynb  README.md  inference_profiling.py  model_utils.py  optimization_adventure.py  optimize_models.py  pyproject.toml  requirements.txt  sentiment_inference.py
docs/: model_compression.md
example_data/: sentiment_labels.txt  sentiment_text.txt
unit_tests/: conftest.py  test_optimize_models.py
